# chess-erdos

./: .envrc  .eslintignore  .eslintrc.js  .gitignore  Cargo.toml  Dioxus.toml  Makefile.toml  README.md  apollo.config.js  build.rs  flake.nix  index.html  install.yml  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.ts  quasar.conf.js  quasar.extensions.json  result  rsw.toml  stylelint.config.js  systemd.conf  systemd.conf.j2  tsconfig.json  unocss.config.ts  vetur.config.js  vite.config.ts
frontend/: .eslintignore  .eslintrc.js  .gitignore  README.md  babel.config.js  package-lock.json  package.json
frontend/src/: shims-vue.d.ts
frontend/src/components/: CompositionComponent.vue  EssentialLink.vue
frontend/src/lib/: grpc.ts
frontend/src/pages/: Index.vue
frontend/src/router/: index.ts
html/: icons.css  index.html  main.ts  style.css
html/style/: icons.css  layout.css
proto/: chess_erdos.proto  pbdb.proto  service.proto
rkyvdb/: Cargo.toml
rkyvdb/src/: lib.rs
src/: client.rs  db.rs  grpc.rs  lib.rs  main.rs  main.ts  process_archive.rs  server.rs  uno.rs  util.rs
src/apollo/: index.ts
src/boot/: apollo.ts
src/client/: components.rs  index.html  main.ts  mod.rs  pages.rs  style.css  uno.rs
src/client/components/: erdos_chain.rs  erdos_chain_list.rs  erdos_link_card.rs  mod.rs  time.rs  user_card.rs  wcn.rs
src/client/pages/: erdos_chains.rs  home.rs  layout.rs  mod.rs  user.rs
src/components/: CompositionComponent.vue
src/data/: case_insensitive_string.rs  collections.rs  db.rs  mod.rs
src/grpc/: index.ts
src/layouts/: MainLayout.vue
src/pages/: Error404.vue  Index.vue
src/router/: index.ts
src/server/: data.rs  db.rs  grpc.rs  http.rs  mod.rs  process_archive.rs
