[package]
name = "chess-erdos"
version = "0.1.0"
authors = ["Aleksei Zolotov <freopen@freopen.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
chrono-humanize = "0.2.1"
console_error_panic_hook = "0.1.7"
dioxus = { version = "0.2.4", features = ["web", "router"] }
dioxus-core = "0.2.1"
js-sys = "0.3.57"
lazy_static = "1.4.0"
log = "0.4.17"
reqwest = { version = "0.11.10", features = [
    "rustls-tls-native-roots",
], default-features = false }
rmp-serde = "1.1.0"
serde = { version = "1.0.137", features = ["derive"] }
wasm-bindgen = "0.2.89"
wasm-logger = "0.2.0"

[target.'cfg(unix)'.dependencies]
anyhow = { version = "1.0.57", features = ["backtrace"] }
axum = "0.6.1"
futures = "0.3.21"
headers = "0.3.7"
include_dir = "0.7.2"
metrics = "0.20.1"
metrics-exporter-prometheus = "0.11.0"
metrics-util = "0.14.0"
mime_guess = "2.0.4"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.11.0", features = ["tls-roots"] }
pgn-reader = "0.22.0"
rkyvdb = { version = "0.1.0", path = "./rkyvdb" }
shakmaty = "0.23.0"
tokio = { version = "1.18.2", features = ["full"] }
tonic = "0.8.3"
tower-http = { version = "0.3.2", features = ["trace"] }
tracing = "0.1.34"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[profile.release-server]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
# wasm-opt = false

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true
